k8/jupyter/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: jupyter-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /$1

spec:
  rules:
    - host: jupyter.info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: jupyter
                port:
                  number: 8888
